Updating rate limit information for streaming API

--- a/Twitter_Scraping_For_Researchers_A_Walkthrough.ipynb
+++ b/Twitter_Scraping_For_Researchers_A_Walkthrough.ipynb
@@ -294,6 +294,8 @@
     "\n",
     "The cell below will run indefinitely.  You'll want to stop it at some point—likely after only a few seconds!—so be prepared to click the stop button at the top of this workbook once you have some tweets in the output cell.  If you leave the search term as 'trump' then you'll have enough tweets to prove that it works after about two seconds!\n",
     "\n",
+    "It is also possible that you'll hit a rate limit with the search te\n",
+    "\n",
     "!!! IMPORTANT !!!"
    ]
   },
