DB section under development.

--- a/Twitter_Scraping_For_Researchers_A_Walkthrough.ipynb
+++ b/Twitter_Scraping_For_Researchers_A_Walkthrough.ipynb
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What is a tweet, _really_?"
+    "## What is a tweet, _really_ ?"
    ]
   },
   {
@@ -808,13 +808,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MongoDB, Pymongo and Robo3T"
+    "## Under Development: MongoDB, Pymongo and Robo3T"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[This section is incomplete.  Most of the code should work but the explanations are still being assembled.  As with the rest of the notebook, use at your own risk and under your own discretion.]\n",
+    "\n",
     "[MongoDB](https://www.mongodb.com/) is one option to consider for a database that can be used to hold a collection of tweets.  It is ideal for this because its internal structure for the items it holds (usually called \"posts\") follows the same JSON principles that Twitter uses for tweets.\n",
     "\n",
     "The rest of this section assumes that you have installed MongoDB and that it is running.  Regardless of whether you are following along in Google Colab or on your own machine this is not likely to be the case and so we'll simply look at how this is done in principle.\n",
@@ -1276,7 +1278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
