Adding link to GitHub.

--- a/Twitter_API_For_Researchers_A_Walkthrough.ipynb
+++ b/Twitter_API_For_Researchers_A_Walkthrough.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "I won't promise you any support but if you send me a note I'll help as I am able.\n",
     "\n",
-    "The Python library used is called TwitterAPI (no space) and it can be found at https://github.com/geduldig/TwitterAPI.  Most of the code that is throughout this workbook is drawn directly from the examples on these pages.\n",
+    "The Python library used is called TwitterAPI (no space) and it can be found at https://github.com/geduldig/TwitterAPI.  Most of the code that is throughout this workbook was originally drawn directly from the examples on these pages and has been supplemented with new examples based on questions asked by people using the workbook.  The most recent version of this workbook should be available [HERE](https://github.com/ualberta-rcg/twitter_api).\n",
     "\n",
     "With all this said, let's get started by installing the TwitterAPI library.\n",
     "\n",
